--- a/public/index.html
+++ b/public/index.html
@@ -42,5 +42,18 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
+
+    <!--Code for service worker registration-->
+    <script>
+      if ('serviceWorker' in navigator) {
+         window.addEventListener('load', () => {
+           navigator.serviceWorker.register('/sw.js').then(registration => {
+             console.log('SW registered: ', registration);
+           }).catch(registrationError => {
+             console.log('SW registration failed: ', registrationError);
+           });
+         });
+       }
+   </script>
   </body>
 </html>
